// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tool surface isolation > pins the ranked order a project run gets 1`] = `
[
  "list_directory",
  "read_file_range",
  "search_files",
  "code_outline",
  "replace_lines",
  "edit_file",
  "write_file",
  "append_file",
  "run_command",
  "read_file",
  "read_multiple_files",
  "find_files",
  "patch_file",
  "preview_html",
  "show_image",
  "create_directory",
  "run_project_check",
  "web_search",
  "fetch_url",
  "anodex_status",
  "schedule_task",
  "delete_scheduled_task",
  "git_diff",
  "git_status",
  "get_file_info",
  "search_code",
  "write_plan",
  "update_plan_step",
  "remember_fact",
  "update_project_notes",
  "git_commit_summary",
  "archive_change",
  "delete_directory",
  "delete_file",
  "find_skill",
  "list_changes",
  "load_skill",
  "move_file",
  "propose_change",
  "update_change_task",
]
`;

exports[`tool surface isolation > pins the ranked order a read-only workspace chat gets 1`] = `
[
  "list_directory",
  "read_file_range",
  "search_files",
  "code_outline",
  "read_file",
  "read_multiple_files",
  "find_files",
  "preview_html",
  "show_image",
  "web_search",
  "fetch_url",
  "anodex_status",
  "schedule_task",
  "delete_scheduled_task",
  "git_diff",
  "git_status",
  "get_file_info",
  "write_plan",
  "update_plan_step",
  "remember_fact",
  "git_commit_summary",
  "find_skill",
  "load_skill",
]
`;

exports[`tool surface isolation > pins the ranked order chat gets 1`] = `
[
  "web_search",
  "fetch_url",
  "anodex_status",
  "schedule_task",
  "delete_scheduled_task",
  "list_threads",
  "search_email",
  "read_email",
  "write_plan",
  "update_plan_step",
  "remember_fact",
  "batch_email",
  "draft_email",
  "find_attachments",
  "find_skill",
  "forward_email",
  "list_email_accounts",
  "list_mailboxes",
  "load_skill",
  "manage_email",
  "move_email",
  "read_email_attachment",
  "reply_email",
  "save_email_draft",
  "send_email",
  "summarize_thread",
]
`;
